--- a/packages/regression_model/tox.ini
+++ b/packages/regression_model/tox.ini
@@ -7,7 +7,8 @@
 # + Streamline steps such as model training, model publishing
 
 [tox]
-envlist = regression_model
+requires= tox-conda
+envlist = a61
 skipsdist = True
 
 [testenv]
