Ajout de l'étape 9

--- a/packages/regression_model/tox.ini
+++ b/packages/regression_model/tox.ini
@@ -12,7 +12,10 @@ envlist = a61
 skipsdist = True
 
 [testenv]
-install_command = pip install {opts} {packages}
+	
+#install_command = pip install {opts} {packages}
+install_command = python {toxworkdir}\a61\Scripts\pip-script.py install {opts} {packages}
+
 deps =
 	-rrequirements.txt
 
@@ -29,7 +32,7 @@ deps =
 	{[testenv]deps}
 
 setenv =
-  	PYTHONPATH=.
+	PYTHONPATH=.
 
 commands =
 	python regression_model/train_pipeline.py
