--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,8 +1,6 @@
 # api
-flask==3.0.1
+flask==1.0.2
 
 # local regression_model package
 # update with your local path
-
-#-e "C:\Users\Dell\Desktop\cours-A61\cours-A61\packages\regression_model"
- -e "C:\ProjetGit\CoursA61-2023\packages\regression_model"
+-e "C:\Users\Dell\Desktop\cours-A61\cours-A61\packages\regression_model"
